# ppu.toys

./: .env.example  .gitignore  Cargo.toml  Cookfile  LICENSE  README.md
.github/workflows/: ci.yml  deploy.yml
crates/ppu-core/: Cargo.toml
crates/ppu-core/src/: bg.rs  compositor.rs  import_m7.rs  lib.rs  linetable.rs  lua.rs  memory.rs  mode7.rs  modes.rs  pins.rs  quantize.rs  registers.rs  source.rs  sprite.rs  trace.rs  wasm.rs  window.rs
crates/ppu-core/src/import/: mod.rs  obj.rs  quantize.rs  tiles.rs
crates/ppu-core/tests/: color_namespace.rs  dsl_quantize.rs  golden.rs  golden_bg.rs  golden_composite.rs  golden_demos.rs  golden_importer.rs  golden_mode7.rs  golden_obj_limits.rs  golden_sprite.rs  import_mode7.rs  lua_output.rs  lua_pipeline.rs  lua_sources.rs  pins_override.rs  screen_namespace.rs  source_roundtrip.rs  win_namespace.rs
crates/ppu-server/: Cargo.toml  Cookfile
crates/ppu-server/migrations/: 0001_init.sql
crates/ppu-server/src/: admin.rs  auth.rs  blobs.rs  config.rs  db.rs  error.rs  hearts.rs  lib.rs  main.rs  state.rs  toys.rs  web.rs
crates/ppu-server/tests/: admin.rs  auth_oauth.rs  auth_session.rs  blobs.rs  blobs_serve.rs  config.rs  db.rs  e2e.rs  hearts.rs  ratelimit.rs  toys_crud.rs  toys_fork.rs  toys_publish.rs  toys_wall.rs  web.rs
crates/ppu-server/tests/common/: mod.rs
crates/ppu-server/web-placeholder/: index.html
deploy/: Caddyfile  Cookfile  box-setup.sh  litestream.service  litestream.yml  ppu-server.env.example  ppu-server.service
web/: README.md  cosmos.config.json  index.html  package-lock.json  package.json  vite.config.ts
web/.ladle/: components.tsx  config.mjs  decorators.tsx
web/docs/: agent-ui-loop.md
web/scripts/: fixture-ref.mjs  fixture-ref.node.mjs  shoot.mjs
web/src/: App.tsx  cosmos.decorator.tsx  index.html  main.tsx  viteProxy.ts
web/src/api/: base64.ts  (+5 more)
(+271 files in other folders)
